# govee-h5055-monitor

./: README.md  pyproject.toml
src/govee_thermometer/: main.py
