[tool.poetry]
name = "govee-thermometer"
version = "0.1.0"
description = "Monitor Govee H5055 meat thermometer temperatures"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "govee_thermometer", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
govee-ble = "^0.44.0"
bleak = "^0.21.1"
click = "^8.1.7"
home-assistant-bluetooth = "^1.3.0"
dbus-fast = "^2.44.1"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.poetry.scripts]
govee-thermometer = "govee_thermometer.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
